# ptamRosBinaryFeatureRelocalization

./: .gitignore  CompilationNotes.txt  README.md  calibrateROS_PTAM.sh  collectResults.sh  do_eval.sh  imageDecompressionNode.sh  imu_and_cam.launch  launchROS_PTAM.sh
PTAM-GPL/: ARDriver.cc  ARDriver.h  ATANCamera.cc  ATANCamera.h  Bundle.cc  CMakeLists.txt  CameraCalibrator  CameraCalibrator.cc  GLWindow2.cc  GLWindow2.h  HomographyInit.cc  HomographyInit.h  KeyFrame.cc  KeyFrame.h  Makefile  Map.h  MapMaker.cc  MapMaker.h  MapPoint.h  MapViewer.cc  PTAM  ROSImporter.cc  ROSImporter.h  Relocaliser.cc  Relocaliser.h  System.cc  System.h  Tracker.cc  Tracker.h  VideoSource.h  VideoSource_Linux_Gstreamer_File.cc  VideoSource_Linux_ROS.cc  camera_FIREFLY.cfg  camera_NEXUS.cfg  camera_SONY.cfg  log.txt  main.cc  makeRos.sh  ptamBriefRelocalize.cfg  settings.cfg
PTAM-GPL/deprecated/: Classifier.cpp  Classifier.hpp  ThreadedClassifier.hpp  test_BriefClustering.cpp  test_BriefKBinaryMeans.cpp
PTAM-GPL/ptam_ros_wrapper/: CMakeLists.txt  mainpage.dox  manifest.xml
PTAM-GPL/ptam_ros_wrapper/include/ptam_ros_wrapper/: ros_listener.h
PTAM-GPL/ptam_ros_wrapper/src/: ros_listener.cpp
briefRelocalize/: Assert.h  BriefAssociation.hpp  BriefData.cpp  BriefData.hpp  BriefExtractor.cpp  BriefExtractor.hpp  BriefRelocalizer.cpp  BriefRelocalizer.hpp  Ransac.cpp  Ransac.hpp  outputHelper.cpp  outputHelper.hpp
lshKBM/: CMakeLists.txt
lshKBM/include/: BriefDesc.hpp  MultiThreading.hpp  Random.hpp  association.hpp  briefIR.hpp  classifier.hpp  kbm.hpp  lsh.hpp  lshKBM.hpp  lsh_orig.hpp  nn.hpp  results.hpp  timer.hpp
lshKBM/src/: BriefDesc.cpp  briefIR.cpp  lshKBM.cpp  results.cpp
lshKBM/tests/: testBriefDesc.cpp  testLshTable.cpp  test_Random.cpp
test/: CMakeLists.txt  PtamReloc.hpp  camera_samsunggalaxy.cfg  camera_vidsnap.cfg  helpers.cpp  helpers.hpp  testRANSAC.cpp  test_BRIEF.cpp  test_BriefNN.cpp  vidsnap_theoretical.cfg
